--- a/en/about.html
+++ b/en/about.html
@@ -34,7 +34,7 @@
         <div class="header-actions">
             <button class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
-                <span class="lang-label">FR</span>
+                <span class="lang-label">EN</span>
             </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
@@ -44,17 +44,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
+                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
+                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -62,35 +62,35 @@
     <main>
         <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
-                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Back to Home
             </a>
             <img src="/assets/img/a-propos.avif" class="mileva" loading="lazy" />
         </div>
 
         <section class="introduction">
-            <h1 class="title">À Propos</h1>
+            <h1 class="title">About</h1>
         </section>
 
         <section class="article-section">
-            <h2 class="article-title">Qui suis-je ?</h2>
+            <h2 class="article-title">Who am I?</h2>
 
             <p>
-                Je suis une étudiante en MMI au département de Montbéliard. Ce projet a été réalisé en 2025 dans le cadre d’un exercice pédagogique autour du thème de l’effet Matilda, qui met en lumière les femmes scientifiques injustement oubliées ou éclipsées par leurs homologues masculins.
+                I am a student in MMI at the Montbéliard department. This project was carried out in 2025 as part of an educational exercise on the theme of the Matilda Effect, which highlights female scientists unfairly forgotten or overshadowed by their male counterparts.
             </p>
 
-            <h2 class="article-title">Mon Approche</h2>
+            <h2 class="article-title">My Approach</h2>
 
             <p>
-                J’ai choisi de travailler sur Mileva Einstein, une figure fascinante souvent associée à l’effet Matilda. Longtemps restée dans l’ombre d’Albert Einstein, elle aurait contribué à ses premiers travaux sur la relativité, notamment dans la compréhension de l’espace-temps et de la vitesse de la lumière, sans jamais obtenir la reconnaissance qu’elle méritait. À travers ce projet, j’ai voulu réhabiliter son rôle et questionner la manière dont l’histoire de la science invisibilise les femmes.
+                I chose to work on Mileva Einstein, a fascinating figure often associated with the Matilda Effect. Long kept in Albert Einstein's shadow, she is believed to have contributed to his early work on relativity, particularly in understanding space-time and the speed of light, without ever receiving the recognition she deserved. Through this project, I aimed to rehabilitate her role and question how the history of science renders women invisible.
             </p>
 
             <p>
-                Mon approche a consisté à conjuguer rigueur documentaire et sensibilité graphique, pour créer un site à la fois pédagogique, esthétique et engagé, qui invite à reconsidérer la place des femmes dans la recherche scientifique.
+                My approach combined documentary rigor and graphic sensitivity to create a site that is educational, aesthetic, and engaged, inviting a reconsideration of women's place in scientific research.
             </p>
         </section>
 
         <section class="content">
-            <h2 class="content-title">Autres projets</h2>
+            <h2 class="content-title">Other projects</h2>
             <div class="project-container">
                 <img src="/assets/img/project1.avif" alt="Illustration carte 1" class="project-img" />
                 <h3 class="card-title">Anning Coast</h3>
@@ -111,18 +111,18 @@
             </a>
 
             <nav class="footer-nav" aria-label="Navigation du footer">
-                <p class="footer-nav-title">Liens utiles</p>
+                <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/" class="footer-nav-link">Mentions Légales</a></li>
-                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
+                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
+                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossary</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
 
         <div class="footer-social">
-            <p class="social-title">Nous suivre</p>
+            <p class="social-title">Follow us</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
                     <img src="/assets/icons/Facebook.svg" alt="" aria-hidden="true" loading="lazy" />
@@ -139,7 +139,7 @@
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
+            <p>© Project carried out in 2025 as part of an educational exercise at the MMi department of Montbéliard</p>
         </div>
     </footer>
     <script src="/src/js/menu.js"></script>
