--- a/en/article.html
+++ b/en/article.html
@@ -34,7 +34,7 @@
         <div class="header-actions">
             <button class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
-                <span class="lang-label">FR</span>
+                <span class="lang-label">EN</span>
             </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
@@ -44,17 +44,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
+                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
+                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -62,102 +62,102 @@
     <main>
         <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
-                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Back to Home
             </a>
             <img src="/assets/img/people.avif" class="mileva" loading="lazy" />
         </div>
 
         <section class="introduction">
-            <h1 class="title">Les Femmes de Science dans la Littérature</h1>
+            <h1 class="title">Women in Science in Literature</h1>
         </section>
 
         <p class="section-separator">∑∫∂∇π∞</p>
 
         <section class="article-section">
-            <h2 class="article-title">Invisibilisation Littéraire</h2>
+            <h2 class="article-title">Literary Invisibilization</h2>
 
             <p>
-                Pendant des siècles, la contribution des femmes à la science a été largement minimisée, voire totalement effacée des récits écrits. Cette invisibilisation ne concerne pas uniquement les publications académiques, mais s'étend aussi à la littérature populaire, aux manuels scolaires, aux biographies scientifiques et aux grands récits historiques qui façonnent la mémoire collective. En conséquence, l'histoire des sciences transmise au grand public a longtemps donné l'impression que les découvertes majeures étaient presque exclusivement l'œuvre d'hommes.
+                For centuries, women's contributions to science have been widely minimized or even erased from written accounts. This invisibilization is not limited to academic publications but also extends to popular literature, school textbooks, scientific biographies, and major historical narratives that shape collective memory. As a result, the history of science presented to the public has long given the impression that major discoveries were almost exclusively the work of men.
             </p>
 
             <img src="/assets/img/femme.avif" class="article-image" alt="Illustration de Matilda Joslyn Gage" loading="lazy" />
 
             <p>
-                Dans la littérature scientifique classique, les femmes sont rarement mentionnées comme actrices centrales de la recherche. Lorsqu'elles apparaissent, c'est souvent dans des rôles secondaires : assistantes de laboratoire, collaboratrices discrètes ou épouses de scientifiques reconnus. Leur contribution intellectuelle est alors présentée comme un soutien plutôt que comme un apport scientifique à part entière, même lorsque leur travail s'avère essentiel aux découvertes réalisées. Cette représentation biaisée contribue à renforcer l'idée que le génie scientifique serait majoritairement masculin.
+                In classical scientific literature, women are rarely mentioned as central actors in research. When they do appear, it is often in secondary roles: laboratory assistants, discreet collaborators, or wives of recognized scientists. Their intellectual contribution is then presented as support rather than as a standalone scientific contribution, even when their work is essential to the discoveries made. This biased representation reinforces the idea that scientific genius is predominantly male.
             </p>
 
             <p>
-                Les manuels scolaires ont longtemps perpétué cette vision réductrice. En mettant en avant un nombre restreint de figures masculines, ils ont laissé peu de place aux femmes scientifiques, privant ainsi les élèves de modèles féminins dans les domaines des sciences et des technologies. Cette absence n'est pas anodine : elle influence la perception des rôles sociaux et peut décourager certaines vocations, en particulier chez les jeunes filles qui peinent à se projeter dans des carrières scientifiques.
+                Textbooks have long perpetuated this narrow view. By highlighting a limited number of male figures, they have left little room for women scientists, depriving students of female role models in science and technology. This absence is significant: it shapes perceptions of social roles and can discourage future careers, especially among young girls who struggle to envision themselves in scientific professions.
             </p>
 
             <p>
-                La littérature populaire, notamment les biographies, les romans historiques ou les essais de vulgarisation scientifique, a également contribué à cette invisibilisation. Les femmes y sont fréquemment définies par leur relation à un homme célèbre, plutôt que par leurs propres travaux. Ce traitement narratif réduit leur identité scientifique et occulte la complexité de leur parcours, marqué par des contraintes sociales, institutionnelles et culturelles spécifiques.
+                Popular literature—biographies, historical novels, and popular science essays—has also contributed to this invisibilization. Women are frequently defined by their relationship to a famous man rather than by their own work. This narrative treatment reduces their scientific identity and obscures the complexity of their paths, which are marked by social, institutional, and cultural constraints.
             </p>
 
             <p>
-                Aujourd'hui, de nombreux chercheurs, historiens et auteurs s'attachent à corriger ces omissions en revisitant les archives, en publiant de nouvelles biographies et en intégrant davantage de figures féminines dans les programmes éducatifs. Cette relecture critique de la littérature scientifique et historique ne vise pas à réécrire l'histoire, mais à la rendre plus complète et plus fidèle à la réalité des contributions scientifiques, en reconnaissant enfin la place essentielle qu'ont occupée les femmes dans le développement des savoirs.
+                Today, many researchers, historians, and authors work to correct these omissions by revisiting archives, publishing new biographies, and including more female figures in educational curricula. This critical re-examination of scientific and historical literature does not aim to rewrite history but to make it more complete and faithful to the reality of scientific contributions, finally recognizing the essential role women have played in the development of knowledge.
             </p>
 
-            <h2 class="article-title">Les Mécanismes de l'Effacement</h2>
+            <h2 class="article-title">Mechanisms of Erasure</h2>
 
             <p>
-                L'effacement des femmes scientifiques de la littérature et de l'histoire des sciences ne relève pas du hasard, mais repose sur plusieurs mécanismes systématiques, ancrés dans des pratiques institutionnelles, culturelles et sociales de longue date. Ces mécanismes ont contribué à invisibiliser leurs travaux et à minimiser leur rôle dans les grandes avancées scientifiques.
+                The erasure of women scientists from literature and the history of science is not accidental but rests on several systematic mechanisms embedded in long-standing institutional, cultural, and social practices. These mechanisms have contributed to making their work invisible and to minimizing their role in major scientific advances.
             </p>
 
             <img src="/assets/img/litterature.avif" class="article-image" alt="Photographie de Zurich" loading="lazy" />
 
             <p>
-                Le premier de ces mécanismes consiste en l'attribution des contributions féminines à des collègues masculins, en particulier à leurs maris, directeurs de recherche ou collaborateurs hiérarchiquement dominants. Ce phénomène est aujourd'hui désigné sous le nom d'« effet Matilda », en référence à Matilda Joslyn Gage, qui avait identifié ce biais dès 1870. Dans de nombreux cas, les travaux des femmes sont publiés sous un nom masculin ou présentés comme le résultat d'un travail collectif dont seul l'homme reçoit le mérite. Cette pratique a longtemps été facilitée par l'exclusion des femmes des postes académiques officiels et des sociétés savantes.
+                The first of these mechanisms involves attributing women's contributions to male colleagues, particularly husbands, supervisors, or senior collaborators. This phenomenon is now referred to as the "Matilda effect," named after Matilda Joslyn Gage, who identified this bias as early as 1870. In many cases, women's work is published under a male name or presented as the result of collective work for which only the man receives credit. This practice was long facilitated by the exclusion of women from official academic positions and learned societies.
             </p>
 
             <p>
-                Un deuxième mécanisme réside dans la manière dont les femmes apparaissent dans les textes scientifiques et les récits historiques. Lorsqu'elles sont mentionnées, c'est fréquemment dans des rôles considérés comme secondaires ou techniques : assistantes de laboratoire, « calculatrices », secrétaires scientifiques ou simples collaboratrices. Ces désignations réduisent leur contribution à une aide exécutive, alors même qu'elles peuvent être à l'origine des hypothèses, des méthodes ou des interprétations théoriques. Leur expertise et leur leadership intellectuel sont ainsi systématiquement minimisés.
+                A second mechanism lies in how women appear in scientific texts and historical narratives. When mentioned, they are frequently portrayed in roles considered secondary or technical: laboratory assistants, "computers," scientific secretaries, or simple collaborators. These labels reduce their contribution to executive assistance, even when they may have originated hypotheses, methods, or theoretical interpretations. Their expertise and intellectual leadership are thus systematically downplayed.
             </p>
 
             <p>
-                Un troisième mécanisme concerne la reconnaissance institutionnelle. Les femmes ont longtemps été exclues de l'accès aux diplômes, aux postes universitaires, aux financements et aux prix scientifiques. Cette absence de reconnaissance officielle a eu pour conséquence directe leur disparition progressive des archives et des références bibliographiques. Sans titres, sans postes et sans distinctions, leurs travaux sont plus facilement oubliés ou attribués à d'autres.
+                A third mechanism concerns institutional recognition. Women were long excluded from access to degrees, university positions, funding, and scientific awards. This lack of official recognition directly led to their gradual disappearance from archives and bibliographic references. Without titles, positions, and honors, their work is more easily forgotten or attributed to others.
             </p>
 
             <p>
-                Enfin, l'effacement se perpétue à travers la transmission du savoir. Les manuels scolaires, les ouvrages de vulgarisation et les récits historiques ont souvent repris des versions simplifiées de l'histoire des sciences, centrées sur quelques figures masculines présentées comme des génies isolés. Cette construction narrative laisse peu de place aux collaborations et efface les contributions féminines, contribuant à reproduire ces biais sur plusieurs générations.
+                Finally, the erasure continues through the transmission of knowledge. Textbooks, popular science books, and historical narratives have often adopted simplified versions of the history of science centered on a few male figures presented as isolated geniuses. This narrative construction leaves little room for collaborations and erases women's contributions, helping to reproduce these biases across generations.
             </p>
         </section>
 
         <section class="timeline">
-            <h2 class="content-title">Frise chronologique</h2>
+            <h2 class="content-title">Timeline</h2>
 
             <p class="content-description">
-                Des femmes scientifiques dont les contributions ont été attribuées à des hommes
+                Women scientists whose contributions were attributed to men
             </p>
 
             <div class="timeline-container">
                 <h3 class="timeline-title">Mileva Einstein</h3>
                 <div class="timeline-item">
-                    <span class="timeline-year">Physique théorique - 1905</span>
-                    <p class="timeline-description">Relativité restreinte</p>
+                        <span class="timeline-year">Theoretical physics - 1905</span>
+                        <p class="timeline-description">Special relativity</p>
                 </div>
 
                 <h3 class="timeline-title">Lise Meitner</h3>
                 <div class="timeline-item">
-                    <span class="timeline-year">Physique nucléaire - 1938</span>
-                    <p class="timeline-description">Fission nucléaire</p>
+                    <span class="timeline-year">Nuclear physics - 1938</span>
+                    <p class="timeline-description">Nuclear fission</p>
                 </div>
 
                 <h3 class="timeline-title">Rosalind Franklin</h3>
                 <div class="timeline-item">
-                    <span class="timeline-year">Cristallographie - 1952</span>
-                    <p class="timeline-description">Structure de l'ADN</p>
+                    <span class="timeline-year">Crystallography - 1952</span>
+                    <p class="timeline-description">DNA structure</p>
                 </div>
 
                 <h3 class="timeline-title">Chien-Shiung Wu</h3>
                 <div class="timeline-item">
-                    <span class="timeline-year">Physique expérimentale - 1956</span>
-                    <p class="timeline-description">Parité en physique</p>
+                    <span class="timeline-year">Experimental physics - 1956</span>
+                    <p class="timeline-description">Parity in physics</p>
                 </div>
 
                 <h3 class="timeline-title">Jocelyn Bell Burnell</h3>
                 <div class="timeline-item">
-                    <span class="timeline-year">Astrophysique - 1967</span>
+                    <span class="timeline-year">Astrophysics - 1967</span>
                     <p class="timeline-description">Pulsars</p>
                 </div>
             </div>
@@ -165,17 +165,17 @@
 
         <section class="other-articles">
             <hr>
-            <h3 class="other-articles-title">Lire aussi</h3>
+            <h3 class="other-articles-title">Also read</h3>
 
             <a href="/fr/effet-matilda.html" class="other-articles-button">
-                L'Effet Matilda
+                The Matilda Effect
                 <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
 
             <br>
 
             <a href="/fr/livre.html" class="other-articles-button">
-                Espace-Temps, Jean-Paul Auffray
+                Space-Time, Jean-Paul Auffray
                 <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
         </section>
@@ -190,10 +190,10 @@
             </a>
 
             <nav class="footer-nav" aria-label="Navigation du footer">
-                <p class="footer-nav-title">Liens utiles</p>
+                <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/" class="footer-nav-link">Mentions Légales</a></li>
+                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
                     <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
@@ -201,7 +201,7 @@
         </div>
 
         <div class="footer-social">
-            <p class="social-title">Nous suivre</p>
+            <p class="social-title">Follow us</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
                     <img src="/assets/icons/Facebook.svg" alt="" aria-hidden="true" loading="lazy" />
@@ -218,7 +218,7 @@
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
+            <p>© Project carried out in 2025 as part of an educational exercise at the MMi department of Montbéliard</p>
         </div>
     </footer>
     <script src="/src/js/menu.js"></script>
