--- a/en/book.html
+++ b/en/book.html
@@ -34,7 +34,7 @@
         <div class="header-actions">
             <button class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
-                <span class="lang-label">FR</span>
+                <span class="lang-label">EN</span>
             </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
@@ -44,17 +44,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
+                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
+                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -62,32 +62,32 @@
     <main>
         <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
-                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Back to Home
             </a>
             <img src="/assets/img/book.avif" class="mileva" loading="lazy" />
         </div>
 
         <section class="introduction" aria-labelledby="titre-livre">
-            <h1 class="title">L'Espace-Temps</h1>
+            <h1 class="title">Space-Time</h1>
             <p class="description">Jean-Paul Auffray</p>
         </section>
 
         <section class="article-section" aria-labelledby="section-apropos">
-            <h2 class="article-title">À Propos de l'Ouvrage</h2>
-            <p>L'ouvrage de Jean-Paul Auffray offre une vulgarisation magistrale des concepts d'espace-temps qui ont révolutionné la physique au début du XXe siècle. Alliant rigueur scientifique et clarté pédagogique, l'auteur dévoile les mystères de la relativité restreinte et générale.</p>
+            <h2 class="article-title">About the Book</h2>
+            <p>Jean-Paul Auffray's book offers an authoritative popularisation of space-time concepts that revolutionised physics at the beginning of the 20th century. Combining scientific rigor and pedagogical clarity, the author unveils the mysteries of special and general relativity.</p>
             <img src="/assets/img/livre.avif" class="card-image" alt="Couverture du livre L'Espace-Temps de Jean-Paul Auffray" loading="lazy" />
-            <p>Ce livre s'adresse aussi bien aux étudiants en physique qu'aux curieux passionnés par les grandes questions de l'univers. Il permet de comprendre comment l'espace et le temps, autrefois considérés comme des entités séparées et absolues, ont été réunis en une seule structure mathématique.</p>
+            <p>This book is aimed at both physics students and curious minds passionate about the big questions of the universe. It explains how space and time, once viewed as separate and absolute entities, were united into a single mathematical structure.</p>
 
             <div class="cards-container">
                 <div class="card">
                     <p>
-                        “La relativité restreinte repose sur deux postulats fondamentaux qui ont des conséquences extraordinaires : l'espace et le temps ne sont pas des entités absolues et indépendantes, mais forment un continuum quadridimensionnel, l'espace-temps.
+                        “Special relativity rests on two fundamental postulates that have extraordinary consequences: space and time are not absolute, independent entities, but form a four-dimensional continuum called space-time.
                     </p>
                     <p>
-                        Pour établir mathématiquement cette nouvelle vision, il fallut développer les transformations de Lorentz. Ces équations montrent que le temps se dilate et les longueurs se contractent pour un observateur en mouvement relatif. Le facteur de Lorentz, γ = 1/√(1 - v²/c²), apparaît dans toutes ces transformations et joue un rôle central.
+                        To establish this new view mathematically, it was necessary to develop the Lorentz transformations. These equations show that time dilates and lengths contract for an observer in relative motion. The Lorentz factor, γ = 1/√(1 - v²/c²), appears in all these transformations and plays a central role.
                     </p>
                     <p>
-                        Ces calculs mathématiques, d'une complexité redoutable, nécessitaient une maîtrise exceptionnelle de l'analyse mathématique et de la géométrie. Chaque étape devait être vérifiée avec une rigueur absolue, car la moindre erreur dans ces longues chaînes de raisonnement pouvait invalider l'ensemble de la théorie.”
+                        These mathematical calculations, of formidable complexity, required exceptional mastery of mathematical analysis and geometry. Each step had to be checked with absolute rigor, because the slightest error in these long chains of reasoning could invalidate the entire theory.”
                     </p>
                     <span class="citation">Jean-Paul Auffray, L'Espace-Temps, p. 45-47</span>
                 </div>
@@ -95,32 +95,32 @@
         </section>
 
         <section class="physics-theory" aria-labelledby="section-mileva">
-            <h2 id="section-mileva" class="content-title">Le Lien avec Mileva Einstein</h2>
-            <p class="physics-description">Comment cet ouvrage éclaire les contributions de Mileva.</p>
+            <h2 id="section-mileva" class="content-title">The Connection to Mileva Einstein</h2>
+            <p class="physics-description">How this work sheds light on Mileva's contributions.</p>
 
             <div class="cards-container">
                 <div class="card">
-                    <h3 class="card-title">Les Mathématiques Complexes</h3>
+                    <h3 class="card-title">Complex Mathematics</h3>
                     <p>
-                        L'ouvrage d'Auffray met en lumière la complexité mathématique derrière la relativité restreinte. Les transformations de Lorentz, les calculs tensoriels et les équations différentielles nécessitaient une maîtrise exceptionnelle des mathématiques - domaine dans lequel Mileva excellait.
+                        Auffray's book highlights the mathematical complexity behind special relativity. Lorentz transformations, tensor calculations, and differential equations required exceptional mastery of mathematics—a field in which Mileva excelled.
                     </p>
                 </div>
             </div>
 
             <div class="cards-container">
                 <div class="card">
-                    <h3 class="card-title">Le Contexte Collaboratif</h3>
+                    <h3 class="card-title">Collaborative Context</h3>
                     <p>
-                        Auffray décrit le contexte scientifique du début du XXe siècle, où la collaboration entre physiciens était courante. Ce contexte historique aide à comprendre la dynamique de travail entre Albert et Mileva.
+                        Auffray describes the scientific context of the early 20th century, where collaboration among physicists was common. This historical background helps to understand the working dynamics between Albert and Mileva.
                     </p>
                 </div>
             </div>
 
             <div class="cards-container">
                 <div class="card">
-                    <h3 class="card-title">La Vérification des Calculs</h3>
+                    <h3 class="card-title">Verification of Calculations</h3>
                     <p>
-                        L'ouvrage présente les nombreuses étapes de calculs qui ont conduit aux équations finales de la relativité. Mileva elle-même a affirmé : "J'ai vérifié tous les calculs mathématiques." En comprenant la densité de ces calculs grâce au livre d'Auffray, on mesure l'importance de cette contribution.                    </p>
+                        The book presents the many calculation steps that led to the final equations of relativity. Mileva herself stated, "I checked all the mathematical calculations." By understanding the depth of these calculations through Auffray's book, one can appreciate the importance of this contribution.                    </p>
                 </div>
             </div>
         </section>
@@ -135,10 +135,10 @@
             </a>
 
             <nav class="footer-nav" aria-label="Navigation du footer">
-                <p class="footer-nav-title">Liens utiles</p>
+                <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/" class="footer-nav-link">Mentions Légales</a></li>
+                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
                     <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
@@ -146,7 +146,7 @@
         </div>
 
         <div class="footer-social">
-            <p class="social-title">Nous suivre</p>
+            <p class="social-title">Follow us</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
                     <img src="/assets/icons/Facebook.svg" alt="" aria-hidden="true" loading="lazy" />
@@ -163,7 +163,7 @@
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
+                <p>© Project carried out in 2025 as part of an educational exercise at the MMi department of Montbéliard</p>
         </div>
     </footer>
     <script src="/src/js/menu.js"></script>
