--- a/en/contact.html
+++ b/en/contact.html
@@ -34,7 +34,7 @@
         <div class="header-actions">
             <button class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
-                <span class="lang-label">FR</span>
+                <span class="lang-label">EN</span>
             </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
@@ -44,17 +44,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
+                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
+                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -62,25 +62,25 @@
     <main>
         <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
-                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Back to Home
             </a>
             <img src="/assets/img/contact.avif" class="mileva" loading="lazy" />
         </div>
 
         <section class="introduction">
-            <h1 class="title">Contactez-nous</h1>
-            <p class="subtitle">Une question ? Une suggestion ? N'hésitez pas à nous écrire.</p>
+            <h1 class="title">Contact Us</h1>
+            <p class="subtitle">A question? A suggestion? Feel free to write to us.</p>
         </section>
 
         <section class="contact-section">
             <form class="contact-form" id="contactForm">
                 <div class="form-group">
-                    <label for="name" class="form-grouplabel">Nom</label>
+                    <label for="name" class="form-grouplabel">Last name</label>
                     <input type="text" id="name" class="form-groupinput" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="name" class="form-grouplabel">Prénom</label>
+                    <label for="name" class="form-grouplabel">First name</label>
                     <input type="text" id="name" class="form-groupinput" required>
                 </div>
 
@@ -94,7 +94,7 @@
                     <textarea id="message" class="form-grouptextarea" rows="6" required></textarea>
                 </div>
 
-                <button type="submit" class="btn btn--primary btn--full">Envoyer<img src="/assets/icons/Send.svg"></button>
+                <button type="submit" class="btn btn--primary btn--full">Send<img src="/assets/icons/Send.svg"></button>
             </form>
         </section>
         
@@ -108,18 +108,18 @@
             </a>
 
             <nav class="footer-nav" aria-label="Navigation du footer">
-                <p class="footer-nav-title">Liens utiles</p>
+                <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/" class="footer-nav-link">Mentions Légales</a></li>
-                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
+                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
+                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossary</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
 
         <div class="footer-social">
-            <p class="social-title">Nous suivre</p>
+            <p class="social-title">Follow us</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
                     <img src="/assets/icons/Facebook.svg" alt="" aria-hidden="true" loading="lazy" />
@@ -136,7 +136,7 @@
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
+            <p>© Project carried out in 2025 as part of an educational exercise at the MMi department of Montbéliard</p>
         </div>
     </footer>
     <script src="/src/js/menu.js"></script>
