--- a/en/glossary.html
+++ b/en/glossary.html
@@ -34,7 +34,7 @@
         <div class="header-actions">
             <button class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
-                <span class="lang-label">FR</span>
+                <span class="lang-label">EN</span>
             </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
@@ -44,17 +44,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
+                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
+                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -62,87 +62,87 @@
     <main>
         <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
-                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Back to Home
             </a>
             <img src="/assets/img/paper.avif" class="mileva" loading="lazy" />
         </div>
 
         <section class="introduction">
-            <h1 class="title">Glossaire</h1>
-            <p class="subtitle">Définitions des termes scientifiques et historiques utilisés dans ce site.</p>
+            <h1 class="title">Glossary</h1>
+            <p class="subtitle">Definitions of scientific and historical terms used on this site.</p>
         </section>
 
         <section class="article-section">
-            <h2 class="article-title">Physique Théorique</h2>
+            <h2 class="article-title">Theoretical Physics</h2>
             <div class="cards-container">
                 <div class="card">
-                    <h3 class="card-title">Relativité Restreinte</h3>
+                    <h3 class="card-title">Special Relativity</h3>
                     <p>
-                        Théorie physique développée en 1905 qui unifie l'espace et le temps en un continuum quadridimensionnel appelé espace-temps. Elle repose sur deux postulats : les lois de la physique sont les mêmes dans tous les référentiels inertiels, et la vitesse de la lumière dans le vide est constante pour tous les observateurs.
+                        A physics theory developed in 1905 that unifies space and time into a four-dimensional continuum called space-time. It is based on two postulates: the laws of physics are the same in all inertial frames, and the speed of light in a vacuum is constant for all observers.
                     </p>
                     <hr>
-                    <p>Source :</p>
+                    <p>Source:</p>
                     <a href="https://fr.wikipedia.org/wiki/Relativit%C3%A9_restreinte" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
-                        Relativité restreinte - Wikipédia
+                        Special Relativity - Wikipedia
                     </a>
                 </div>
             </div>
 
             <div class="cards-container">
                 <div class="card">
-                    <h3 class="card-title">Espace-Temps</h3>
+                    <h3 class="card-title">Space-Time</h3>
                     <p>
-                        Continuum à quatre dimensions (trois dimensions spatiales et une dimension temporelle) dans lequel se déroulent tous les événements physiques. Concept central de la relativité restreinte et générale, l'espace-temps remplace la vision newtonienne d'un espace et d'un temps absolus et séparés.
+                        A four-dimensional continuum (three spatial dimensions and one temporal dimension) in which all physical events occur. Central to special and general relativity, space-time replaces the Newtonian view of space and time as separate, absolute entities.
                     </p>
                     <hr>
-                    <p>Source :</p>
+                    <p>Source:</p>
                     <a href="https://fr.wikipedia.org/wiki/Espace-temps" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
-                        Espace-Temps - Wikipédia
+                        Space-Time - Wikipedia
                     </a>
                 </div>
             </div>
 
             <div class="cards-container">
                 <div class="card">
-                    <h3 class="card-title">Transformations de Lorentz</h3>
+                    <h3 class="card-title">Lorentz Transformations</h3>
                     <p>
-                        Ensemble d'équations mathématiques qui décrivent comment les coordonnées spatiales et temporelles d'un événement changent d'un référentiel inertiel à un autre. Ces transformations, développées par Hendrik Lorentz, sont fondamentales pour la relativité restreinte et remplacent les transformations galiléennes classiques.
+                        A set of mathematical equations that describe how the spatial and temporal coordinates of an event change from one inertial frame to another. Developed by Hendrik Lorentz, these transformations are fundamental to special relativity and replace the classical Galilean transformations.
                     </p>
                     <hr>
-                    <p>Source :</p>
+                    <p>Source:</p>
                     <a href="https://fr.wikipedia.org/wiki/Transformations_de_Lorentz" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
-                        Transformations de Lorentz - Wikipédia
+                        Lorentz Transformations - Wikipedia
                     </a>
                 </div>
             </div>
 
             <div class="cards-container">
                 <div class="card">
-                    <h3 class="card-title">Vitesse de la Lumière</h3>
+                    <h3 class="card-title">Speed of Light</h3>
                     <p>
-                        Constante universelle notée "c", égale à 299 792 458 mètres par seconde dans le vide. C'est la vitesse maximale à laquelle l'information et la matière peuvent se déplacer dans l'univers. Sa constance dans tous les référentiels inertiels est l'un des postulats fondamentaux de la relativité restreinte.
+                        The universal constant denoted "c", equal to 299,792,458 meters per second in a vacuum. It is the maximum speed at which information and matter can travel in the universe. Its constancy in all inertial frames is one of the fundamental postulates of special relativity.
                     </p>
                     <hr>
-                    <p>Source :</p>
+                    <p>Source:</p>
                     <a href="https://fr.wikipedia.org/wiki/Vitesse_de_la_lumi%C3%A8re" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
-                        Vitesse de la Lumière - Wikipédia
+                        Speed of Light - Wikipedia
                     </a>
                 </div>
             </div>
         </section>
 
         <section class="physics-theory">
-            <h2 class="content-title">Histoire des Sciences</h2>
+            <h2 class="content-title">History of Science</h2>
             <div class="cards-container">
                 <div class="card">
-                    <h3 class="card-title">Effet Matthieu</h3>
+                    <h3 class="card-title">Matthew Effect</h3>
                     <p>
-                        Biais de déni ou de minimisation systématique de la contribution des femmes scientifiques à la recherche, dont le travail est souvent attribué à leurs collègues masculins. Nommé par l'historienne Margaret W. Rossiter en 1993 en hommage à Matilda Joslyn Gage.
+                        A bias of denial or systematic minimization of women scientists' contributions to research, where their work is often attributed to male colleagues. Named by historian Margaret W. Rossiter in 1993 in honor of Matilda Joslyn Gage.
                     </p>
                     <hr>
-                    <p>Source :</p>
+                    <p>Source:</p>
                     <a href="https://fr.wikipedia.org/wiki/Effet_Matthieu" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
-                        Effet Matthieu - Wikipédia
+                        Matthew Effect - Wikipedia
                     </a>
                 </div>
             </div>
@@ -158,18 +158,18 @@
             </a>
 
             <nav class="footer-nav" aria-label="Navigation du footer">
-                <p class="footer-nav-title">Liens utiles</p>
+                <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/" class="footer-nav-link">Mentions Légales</a></li>
-                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
+                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
+                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossary</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
 
         <div class="footer-social">
-            <p class="social-title">Nous suivre</p>
+            <p class="social-title">Follow us</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
                     <img src="/assets/icons/Facebook.svg" alt="" aria-hidden="true" loading="lazy" />
@@ -186,7 +186,7 @@
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
+            <p>© Project carried out in 2025 as part of an educational exercise at the MMi department of Montbéliard</p>
         </div>
     </footer>
     <script src="/src/js/menu.js"></script>
