--- a/en/history.html
+++ b/en/history.html
@@ -34,7 +34,7 @@
         <div class="header-actions">
             <button class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
-                <span class="lang-label">FR</span>
+                <span class="lang-label">EN</span>
             </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
@@ -44,17 +44,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
+                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
+                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -62,85 +62,85 @@
     <main>
         <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
-                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Back to Home
             </a>
             <img src="/assets/img/history.avif" class="mileva" loading="lazy" />
         </div>
 
         <section class="introduction">
-            <h1 class="title">Mileva Einstein : La Chercheuse</h1>
+            <h1 class="title">Mileva Einstein: The Researcher</h1>
             <p class="description">
-                Le parcours exceptionnel d'une pionnière de la physique théorique au tournant du 20ème siècle.
+                The remarkable journey of a pioneer in theoretical physics at the turn of the 20th century.
             </p>
         </section>
 
         <section class="article-section">
-            <h2 class="article-title">Une Brillante Étudiante</h2>
+            <h2 class="article-title">A Brilliant Student</h2>
 
             <p>
-                Mileva Marić est née le 19 décembre 1875 à Titel, dans l’Empire austro-hongrois (aujourd’hui en Serbie), au sein d’une famille qui valorise l’éducation. Très tôt, elle se distingue par des capacités intellectuelles hors du commun, en particulier en mathématiques et en sciences. Dans un contexte social où les femmes sont rarement encouragées à poursuivre des études scientifiques avancées, Mileva doit surmonter de nombreux obstacles pour accéder à l’enseignement supérieur.
+                Mileva Marić was born on December 19, 1875 in Titel, then part of the Austro-Hungarian Empire (now in Serbia), into a family that valued education. From an early age she stood out for exceptional intellectual abilities, particularly in mathematics and the sciences. In a social context where women were rarely encouraged to pursue advanced scientific studies, Mileva had to overcome many obstacles to access higher education.
             </p>
 
             <p>
-                Son parcours scolaire est marqué par d’excellents résultats, notamment dans des disciplines considérées comme masculines à la fin du XIXᵉ siècle. Grâce à sa persévérance et au soutien de certains enseignants progressistes, elle parvient à intégrer des établissements prestigieux, chose exceptionnelle pour une femme de son époque.
+                Her school career was marked by excellent results, notably in disciplines considered masculine at the end of the 19th century. Thanks to her perseverance and the support of progressive teachers, she managed to enter prestigious institutions—an exceptional achievement for a woman of her time.
             </p>
 
             <p>
-                En 1896, Mileva Marić devient l’une des premières femmes admises au Polytechnicum de Zurich (aujourd’hui l’ETH Zurich) pour y étudier la physique et les mathématiques. Elle est alors la seule femme inscrite dans la section de physique, évoluant dans un environnement académique largement dominé par les hommes. Cette situation l’expose à une pression constante, mais elle s’impose par son sérieux, sa rigueur scientifique et sa capacité d’analyse.
+                In 1896, Mileva Marić became one of the first women admitted to the Zurich Polytechnic (now ETH Zurich) to study physics and mathematics. She was the only woman enrolled in the physics section, studying in an academic environment largely dominated by men. This exposed her to constant pressure, but she stood out for her seriousness, scientific rigor, and analytical ability.
             </p>
 
             <img src="/assets/img/zurich.avif" class="article-image" alt="Photographie de Zurich" loading="lazy" />
 
             <p>
-                Durant ses études, Mileva se spécialise dans des domaines complexes comme la physique théorique et les mathématiques avancées. Elle se distingue par une approche méthodique et une compréhension approfondie des concepts scientifiques, qualités reconnues par certains de ses camarades et professeurs. Malgré cela, elle doit composer avec des difficultés institutionnelles et personnelles qui freinent sa reconnaissance académique.
+                During her studies, Mileva specialized in complex fields such as theoretical physics and advanced mathematics. She was noted for a methodical approach and a deep understanding of scientific concepts—qualities recognized by some of her peers and professors. Nevertheless, she faced institutional and personal difficulties that hindered her academic recognition.
             </p>
 
             <p>
-                Le parcours universitaire de Mileva Marić illustre à la fois son talent indéniable et les limites imposées aux femmes scientifiques à la fin du XIXᵉ siècle. Son engagement dans les sciences et sa place au sein d’une institution aussi prestigieuse que l’ETH Zurich font d’elle une figure marquante de l’histoire des femmes dans la science, bien au-delà de son rôle d’étudiante.
+                Mileva Marić's university career illustrates both her undeniable talent and the limitations imposed on women scientists at the end of the 19th century. Her commitment to science and her place within an institution as prestigious as ETH Zurich make her a significant figure in the history of women in science, far beyond her role as a student.
             </p>
 
             <div class="cards-container">
                 <div class="card">
                     <img src="/assets/icons/School.svg" alt="Icône école" loading="lazy" />
-                    <h3 class="card-title">Formation</h3>
+                    <h3 class="card-title">Education</h3>
                     <ul class="card-list">
-                        <li>Lycée de Zagreb (1890-1894)</li>
-                        <li>Polytechnicum de Zurich (1896-1900)</li>
-                        <li>Études en physique théorique</li>
-                        <li>Mathématiques avancées</li>
+                        <li>Zagreb High School (1890-1894)</li>
+                        <li>Zurich Polytechnic (1896-1900)</li>
+                        <li>Studies in theoretical physics</li>
+                        <li>Advanced mathematics</li>
                     </ul>
                 </div>
             </div>
 
-            <h2 class="article-title">La Collaboration avec Albert Einstein</h2>
+            <h2 class="article-title">Collaboration with Albert Einstein</h2>
 
             <p>
-                La relation intellectuelle entre Mileva Marić et Albert Einstein dépasse largement le cadre d’un simple lien personnel. Leur correspondance, conservée en partie, révèle une véritable dynamique de travail scientifique. Dans plusieurs lettres adressées à Mileva, Albert Einstein emploie des expressions telles que « notre travail » ou « notre article » pour évoquer leurs recherches communes, en particulier dans le domaine de la physique théorique. Ces formulations laissent entendre une collaboration active, fondée sur des échanges d’idées, des discussions scientifiques approfondies et un travail intellectuel partagé.
+                The intellectual relationship between Mileva Marić and Albert Einstein went far beyond a simple personal bond. Their correspondence, preserved in part, reveals a genuine dynamic of scientific work. In several letters addressed to Mileva, Albert Einstein used expressions such as "our work" or "our paper" to refer to their joint research, particularly in theoretical physics. These formulations suggest an active collaboration based on exchanges of ideas, in-depth scientific discussions, and shared intellectual effort.
             </p>
 
             <img src="/assets/img/mileva_einstein.avif" class="card-image" alt="Photographie de Zurich" loading="lazy" />
 
             <p>
-                Cette collaboration atteint son apogée en 1905, une année aujourd’hui connue sous le nom d’Annus Mirabilis (année miraculeuse). Au cours de cette période exceptionnelle, Albert Einstein publie plusieurs articles qui bouleversent les fondements de la physique moderne. Parmi eux figurent les travaux sur l’effet photoélectrique, le mouvement brownien, la relativité restreinte, ainsi que l’énoncé de la célèbre équation E = mc², qui établit l’équivalence entre la masse et l’énergie. Ces avancées marquent un tournant décisif dans l’histoire des sciences.
+                This collaboration reached its peak in 1905, a year now known as the Annus Mirabilis. During this exceptional period, Albert Einstein published several papers that transformed the foundations of modern physics. These include work on the photoelectric effect, Brownian motion, special relativity, and the famous equation E = mc², which establishes the equivalence of mass and energy. These advances marked a decisive turning point in the history of science.
             </p>
 
             <p>
-                Pourtant, malgré les indices d’un travail collaboratif, seul le nom d’Albert Einstein apparaît sur les publications scientifiques de 1905. À l’époque, la reconnaissance institutionnelle des femmes scientifiques est extrêmement limitée, et il n’est pas rare que leur contribution soit minimisée ou totalement invisibilisée. Mileva Marić, bien que formée à un niveau académique élevé en mathématiques et en physique, ne bénéficie d’aucune reconnaissance officielle pour son implication éventuelle dans ces recherches.
+                Yet despite indications of collaborative work, only Albert Einstein's name appears on the 1905 scientific publications. At the time, institutional recognition of women scientists was extremely limited, and it was not uncommon for their contributions to be minimized or entirely made invisible. Mileva Marić, although trained at a high academic level in mathematics and physics, received no official recognition for any involvement she may have had in these researches.
             </p>
 
             <p>
-                Cette absence de reconnaissance soulève des questions plus larges sur la place des femmes dans l’histoire des sciences et sur la manière dont certaines contributions ont été effacées ou sous-estimées. Aujourd’hui, la figure de Mileva Marić est de plus en plus étudiée, non seulement pour son lien avec Albert Einstein, mais aussi comme symbole des obstacles rencontrés par les femmes scientifiques au début du XXᵉ siècle.
+                This lack of recognition raises broader questions about the place of women in the history of science and how certain contributions have been erased or underestimated. Today, Mileva Marić is increasingly studied not only for her connection to Albert Einstein but also as a symbol of the obstacles faced by women scientists in the early 20th century.
             </p>
 
             <div class="cards-container">
                 <div class="card">
                     <img src="/assets/icons/Microscope.svg" alt="Icône microscope" loading="lazy" />
-                    <h3 class="card-title">Domaines de Recherche</h3>
+                    <h3 class="card-title">Research Areas</h3>
                     <ul class="card-list">
-                        <li>Relativité restreinte</li>
-                        <li>Thermodynamique</li>
-                        <li>Conductivité thermique</li>
-                        <li>Physique théorique</li>
+                        <li>Special relativity</li>
+                        <li>Thermodynamics</li>
+                        <li>Thermal conductivity</li>
+                        <li>Theoretical physics</li>
                     </ul>
                 </div>
             </div>
@@ -149,17 +149,17 @@
 
         <section class="other-articles">
             <hr>
-            <h3 class="other-articles-title">Lire aussi</h3>
+            <h3 class="other-articles-title">Also read</h3>
 
             <a href="/fr/article.html" class="other-articles-button">
-                Femme de Science dans la Littérature
+                Women in Science in Literature
                 <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
 
             <br>
 
             <a href="/fr/theorie.html" class="other-articles-button">
-                Espace-Temps & Vitesse de la Lumière
+                Space-Time & Speed of Light
                 <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
         </section>
@@ -173,18 +173,18 @@
             </a>
 
             <nav class="footer-nav" aria-label="Navigation du footer">
-                <p class="footer-nav-title">Liens utiles</p>
+                <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/" class="footer-nav-link">Mentions Légales</a></li>
-                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
+                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
+                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossary</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
 
         <div class="footer-social">
-            <p class="social-title">Nous suivre</p>
+            <p class="social-title">Follow us</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
                     <img src="/assets/icons/Facebook.svg" alt="" aria-hidden="true" loading="lazy" />
@@ -201,7 +201,7 @@
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de Montbéliard</p>
+            <p>© Project carried out in 2025 as part of an educational exercise at the MMi department of Montbéliard</p>
         </div>
     </footer>
     <script src="/src/js/menu.js"></script>
