--- a/en/index.html
+++ b/en/index.html
@@ -33,7 +33,7 @@
         <div class="header-actions">
             <button class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
-                <span class="lang-label">FR</span>
+                <span class="lang-label">EN</span>
             </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
@@ -43,17 +43,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
+                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
+                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -64,41 +64,41 @@
         </div>
         <section class="introduction">
             <h1 class="title">Mileva Einstein</h1>
-            <p class="subtitle">Physicienne & Mathématicienne</p>
-            <p class="description">Découvrez l'histoire de Mileva Marić Einstein, une brillante physicienne dont les contributions scientifiques ont longtemps été occultées par l'ombre de son mari, Albert Einstein.</p>
-            <a href="/fr/histoire.html" class="cta-button">Découvrir son histoire <img src="assets/icons/fleche_bas.svg" alt="" loading="lazy" /></a>
+            <p class="subtitle">Physicist & Mathematician</p>
+            <p class="description">Discover the story of Mileva Marić Einstein, a brilliant physicist whose scientific contributions were long overshadowed by her husband, Albert Einstein.</p>
+            <a href="/fr/histoire.html" class="cta-button">Discover her story <img src="assets/icons/fleche_bas.svg" alt="" loading="lazy" /></a>
         </section>
 
         <p class="section-separator">∑∫∂∇π∞</p>
 
         <section class="discover">
-            <h2 class="section-title">• Explorer •</h2>
+            <h2 class="section-title">• Explore •</h2>
             <div class="cards-container">
                 <a href="/fr/article.html" class="card">
                     <img src="assets/icons/article.svg" alt="Article" loading="lazy" />
-                    <h3 class="card-title">Les Femmes de Sciences dans la Littérature</h3>
-                    <p>Comment les femmes de science sont représentées dans la littérature et pourquoi leurs contributions ont été minimisées.</p>
-                    <p class="card-button">Lire l'article <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
+                    <h3 class="card-title">Women in Science in Literature</h3>
+                    <p>How women scientists are represented in literature and why their contributions have been downplayed.</p>
+                    <p class="card-button">Read the article <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
                 </a>
                 <a href="/fr/livre.html" class="card">
                     <img src="assets/icons/livre.svg" alt="Livre" loading="lazy" />
-                    <h3 class="card-title">L'Espace-Temps de Jean-Paul Auffray</h3>
-                    <p>Découvrez "L'Espace-Temps" de Jean-Paul Auffray, un ouvrage de vulgarisation scientifique qui explore les concepts fondamentaux de la relativité et met en lumière les contributions de Mileva Einstein.</p>
-                    <p class="card-button">Lire l'article <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
+                    <h3 class="card-title">Space-Time by Jean-Paul Auffray</h3>
+                    <p>Discover "Space-Time" by Jean-Paul Auffray, a popular science book that explores the fundamental concepts of relativity and highlights Mileva Einstein's contributions.</p>
+                    <p class="card-button">Read the article <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
                 </a>
                 <a href="/fr/film.html" class="card">
                     <img src="assets/img/film.avif"  class="future" alt="Film" loading="lazy" />
-                    <h3 class="card-title">Retour vers le Futur</h3>
-                    <p class="card-date"><img src="assets/icons/calendrier.svg" alt="Calendrier" loading="lazy" /> 1985 - Réalisateur : Robert Zemeckis</p>
-                    <p>Film emblématique sur le voyage dans le temps qui explore les concepts de relativité, de paradoxes temporels et l'impact du passé sur le futur. Un outil parfait pour discuter de la physique du temps et de l'espace.</p>
+                    <h3 class="card-title">Back to the Future</h3>
+                    <p class="card-date"><img src="assets/icons/calendrier.svg" alt="Calendar" loading="lazy" /> 1985 - Director: Robert Zemeckis</p>
+                    <p>Iconic film about time travel that explores concepts of relativity, temporal paradoxes, and the impact of the past on the future. A great starting point to discuss the physics of time and space.</p>
                 </a>
             </div>
         </section>
 
         <section class="content">
-            <h2 class="content-title">L'Espace-Temps & La Lumière</h2>
-            <p class="content-description">Les travaux de Mileva Einstein sur la relativité restreinte ont révolutionné notre compréhension de l'univers, unifiant l'espace et le temps en une seule structure mathématique.</p>
-            <a href="/fr/theorie.html" class="information">En savoir plus <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></a>
+            <h2 class="content-title">Space-Time & Light</h2>
+            <p class="content-description">Mileva Einstein's work on special relativity revolutionized our understanding of the universe, unifying space and time into a single mathematical structure.</p>
+            <a href="/fr/theorie.html" class="information">Learn more <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></a>
         </section>
     </main>
     <footer class="footer">
@@ -109,18 +109,18 @@
             </a>
 
             <nav class="footer-nav" aria-label="Navigation du footer">
-                <p class="footer-nav-title">Liens utiles</p>
+                <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/" class="footer-nav-link">Mentions Légales</a></li>
-                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
+                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
+                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossary</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
 
         <div class="footer-social">
-            <p class="social-title">Nous suivre</p>
+            <p class="social-title">Follow us</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
                     <img src="/assets/icons/Facebook.svg" alt="" aria-hidden="true" loading="lazy" />
@@ -137,7 +137,7 @@
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
+            <p>© Project carried out in 2025 as part of an educational exercise at the MMi department of Montbéliard</p>
         </div>
     </footer>
     <script src="/src/js/menu.js"></script>
