--- a/en/movie.html
+++ b/en/movie.html
@@ -35,7 +35,7 @@
         <div class="header-actions">
             <button class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
-                <span class="lang-label">FR</span>
+                <span class="lang-label">EN</span>
             </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
@@ -45,17 +45,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
+                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
+                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -63,19 +63,19 @@
     <main>
         <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
-                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Back to Home
             </a>
             <img src="/assets/img/movie.avif" class="mileva" loading="lazy" />
         </div>
 
         <section class="introduction">
-            <h1 class="title">Retour vers le Futur</h1>
+            <h1 class="title">Back to the Future</h1>
         </section>
 
         <p class="section-separator">∑∫∂∇π∞</p>
 
         <section class="article-section">
-            <h2 class="article-title">Bande d'annonce</h2>
+            <h2 class="article-title">Trailer</h2>
             <div class="video-container">
                 <video id="myVideo" controls>
                     <source src="/assets/video/Bande-annonce.mp4" type="video/mp4" />
@@ -84,33 +84,33 @@
         </section>
 
         <section class="physics-theory">
-            <h2 class="content-title">Retour vers le Futur et la science</h2>
+            <h2 class="content-title">Back to the Future and Science</h2>
             <img src="/assets/img/voiture.avif" alt="Voiture du film Retour vers le Futur" class="article-image" loading="lazy" />
             <p class="physics-description">
-                "Retour vers le Futur" (1985) est devenu un film culte qui a introduit les concepts de voyage dans le temps, de paradoxes temporels et de relativité à des millions de spectateurs. Bien que romancé et simplifié, le film offre une excellente porte d'entrée pour discuter des vraies théories scientifiques.
+                "Back to the Future" (1985) became a cult film that introduced concepts of time travel, temporal paradoxes, and relativity to millions of viewers. Although dramatized and simplified, the film provides an excellent gateway to discuss real scientific theories.
             </p>
             <p class="physics-description">
-                Le film peut être utilisé comme outil pédagogique pour aborder les travaux de physiciens comme Einstein, et par extension, pour évoquer le rôle méconnu de Mileva Marić Einstein dans le développement de la théorie de la relativité.
+                The film can be used as a teaching tool to approach the work of physicists like Einstein, and by extension, to discuss the lesser-known role of Mileva Marić Einstein in the development of relativity theory.
             </p>
         </section>
 
         <section class="article-section">
-            <h2 class="article-title">Analyse scientifique</h2>
+            <h2 class="article-title">Scientific Analysis</h2>
 
             <p>
-                "Retour vers le Futur" illustre brillamment les concepts de dilatation temporelle et de paradoxes causaux. La fameuse DeLorean atteignant 88 mph (141 km/h) fait référence à la vitesse nécessaire pour franchir une "barrière temporelle" imaginaire, un parallèle créatif avec la vitesse de la lumière en physique relativiste.
+                "Back to the Future" vividly illustrates concepts of time dilation and causal paradoxes. The famous DeLorean reaching 88 mph (141 km/h) refers to the imaginary speed needed to cross a "time barrier," a creative parallel with the speed of light in relativistic physics.
             </p>
             <p>
-                Le film soulève des questions fondamentales sur la nature du temps et de la causalité, thèmes centraux dans les travaux de Mileva Einstein sur la relativité restreinte.
+                The film raises fundamental questions about the nature of time and causality, themes that are central to Mileva Einstein's work on special relativity.
             </p>
 
-            <h2 class="article-title">Films corrélés</h2>
+            <h2 class="article-title">Related Films</h2>
 
             <section class="carousel" aria-label="Carrousel tactile">
                 <div class="carousel-track">
                     <article class="carousel-card">
                         <img src="/assets/img/film1.avif" alt="Illustration carte 1" class="illustration" />
-                        <h3 class="carousel-title">Les figures de l’ombre</h3>
+                        <h3 class="carousel-title">Hidden Figures</h3>
                         <p class="carousel-text"><img src="/assets/icons/calendrier.svg">2016 - Theodore Melfi</p>
                     </article>
 
@@ -128,7 +128,7 @@
 
                     <article class="carousel-card">
                         <img src="/assets/img/film4.avif" alt="Illustration carte 4" class="illustration" />
-                        <h3 class="carousel-title">Genius (Série - Saison 1)</h3>
+                        <h3 class="carousel-title">Genius (Series - Season 1)</h3>
                         <p class="carousel-text"><img src="/assets/icons/calendrier.svg">2017 - Various</p>
                     </article>
                 </div>
@@ -144,10 +144,10 @@
             </a>
 
             <nav class="footer-nav" aria-label="Navigation du footer">
-                <p class="footer-nav-title">Liens utiles</p>
+                <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/" class="footer-nav-link">Mentions Légales</a></li>
+                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
                     <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
@@ -155,7 +155,7 @@
         </div>
 
         <div class="footer-social">
-            <p class="social-title">Nous suivre</p>
+            <p class="social-title">Follow us</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
                     <img src="/assets/icons/Facebook.svg" alt="" aria-hidden="true" loading="lazy" />
@@ -172,7 +172,7 @@
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
+            <p>© Project carried out in 2025 as part of an educational exercise at the MMi department of Montbéliard</p>
         </div>
     </footer>
     <script src="/src/js/menu.js"></script>
