--- a/en/matilda-effect.html
+++ b/en/matilda-effect.html
@@ -34,7 +34,7 @@
         <div class="header-actions">
             <button class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
-                <span class="lang-label">FR</span>
+                <span class="lang-label">EN</span>
             </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
@@ -44,17 +44,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
+                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
+                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -62,81 +62,81 @@
     <main>
         <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
-                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Back to Home
             </a>
             <img src="/assets/img/woman.avif" class="mileva" loading="lazy" />
         </div>
 
         <section class="introduction">
-            <h1 class="title">L’Effet Matilda</h1>
+            <h1 class="title">The Matilda Effect</h1>
         </section>
 
         <p class="section-separator">∑∫∂∇π∞</p>
 
         <section class="article-section">
-            <h2 class="article-title">Qu'est-ce que l'Effet Matilda</h2>
+            <h2 class="article-title">What is the Matilda Effect</h2>
 
             <p>
-                L’effet Matilda désigne un biais systématique par lequel les contributions des femmes scientifiques sont déniées ou minimisées, leurs travaux étant souvent attribués à des collègues masculins. Ce phénomène a été formalisé par l’historienne des sciences Margaret W. Rossiter en 1993, qui a voulu mettre en lumière une injustice persistante dans le monde scientifique. Le nom rend hommage à Matilda Joslyn Gage, une militante américaine pour le droit de vote des femmes et abolitionniste, qui avait déjà identifié ce type de biais dès 1870.
+                The Matilda Effect refers to a systematic bias by which women's contributions to science are denied or minimized, with their work often attributed to male colleagues. This phenomenon was formalized by historian of science Margaret W. Rossiter in 1993 to highlight a persistent injustice in the scientific world. The name honors Matilda Joslyn Gage, an American suffragist and abolitionist who had already identified this type of bias as early as 1870.
             </p>
 
             <img src="/assets/img/matilda.avif" class="article-image" loading="lazy" />
 
             <p>
-                Dans son essai Woman as Inventor, publié cette année-là, Matilda Joslyn Gage écrivait : « Les inventions et découvertes des femmes ont été si nombreuses et importantes, et pourtant, dans presque chaque cas, elles ont été attribuées à des hommes. » Son constat, formulé il y a plus d’un siècle, reste frappant par sa pertinence encore aujourd’hui, illustrant la difficulté pour les femmes d’obtenir une reconnaissance égale dans des domaines scientifiques et techniques.
+                In her essay Woman as Inventor, published that year, Matilda Joslyn Gage wrote: "The inventions and discoveries of women have been so numerous and important, yet in almost every case they have been attributed to men." Her observation, made over a century ago, remains strikingly relevant today, illustrating the difficulty women face in obtaining equal recognition in scientific and technical fields.
             </p>
 
             <p>
-                L’effet Matilda s’inscrit dans une dynamique plus large de reconnaissance académique et sociale. Il est intimement lié à l’effet Matthieu, identifié par le sociologue Robert K. Merton, selon lequel les scientifiques déjà célèbres ou influents reçoivent davantage de crédit pour des contributions similaires à celles de chercheurs moins connus. L’effet Matilda y ajoute une dimension de genre : même lorsque les femmes sont à l’origine de découvertes majeures, leur rôle est souvent éclipsé par celui de collègues masculins, parfois pour des raisons institutionnelles, parfois en raison de stéréotypes culturels profondément enracinés.
+                The Matilda Effect fits into a broader dynamic of academic and social recognition. It is closely related to the Matthew Effect, identified by sociologist Robert K. Merton, whereby already famous or influential scientists receive more credit for contributions similar to those of lesser-known researchers. The Matilda Effect adds a gender dimension: even when women originate major discoveries, their role is often eclipsed by male colleagues, sometimes for institutional reasons and sometimes due to deeply rooted cultural stereotypes.
             </p>
 
             <p>
-                Ce biais peut se manifester de différentes manières : les femmes scientifiques sont parfois exclues des publications, de la co-signature d’articles, des récompenses ou des nominations prestigieuses. Leur travail peut être interprété comme secondaire ou complémentaire, même lorsqu’il est central à la recherche. Des études contemporaines ont montré que ces tendances persistent encore dans de nombreux domaines, de la physique à la biologie, et contribuent à expliquer la sous-représentation des femmes dans certaines disciplines et dans les instances dirigeantes académiques.
+                This bias can take many forms: women scientists are sometimes excluded from publications, denied co-authorship, awards, or prestigious nominations. Their work may be portrayed as secondary or complementary, even when it is central to the research. Contemporary studies have shown that these tendencies persist across many fields, from physics to biology, and help explain the underrepresentation of women in certain disciplines and in academic leadership positions.
             </p>
 
             <p>
-                L’effet Matilda a été mis en lumière dans des cas célèbres, comme celui de Mileva Marić, la première épouse d’Albert Einstein, dont le rôle dans les travaux sur la relativité reste débattu mais qui illustre parfaitement le type de contribution scientifique féminine souvent invisible dans l’histoire. D’autres exemples historiques incluent Rosalind Franklin, dont les travaux ont été cruciaux pour la découverte de la structure de l’ADN, mais dont la reconnaissance fut longtemps éclipsée par ses collègues masculins.
+                The Matilda Effect has been highlighted in famous cases, such as Mileva Marić, Albert Einstein's first wife, whose role in work on relativity remains debated but illustrates the kind of female scientific contribution often invisible in history. Other historical examples include Rosalind Franklin, whose work was crucial to the discovery of DNA's structure but whose recognition was long eclipsed by male colleagues.
             </p>
 
             <p>
-                Comprendre l’effet Matilda permet non seulement de revisiter l’histoire des sciences sous un angle plus juste, mais aussi de réfléchir aux mécanismes contemporains de discrimination et de valorisation dans le milieu scientifique. Mettre en lumière ces biais contribue à créer des environnements de recherche plus équitables et à reconnaître pleinement les contributions des femmes aux découvertes scientifiques majeures.
+                Understanding the Matilda Effect allows us not only to revisit the history of science from a fairer perspective but also to reflect on contemporary mechanisms of discrimination and recognition within the scientific community. Bringing these biases to light helps create more equitable research environments and fully acknowledge women's contributions to major scientific discoveries.
             </p>
             <div class="cards-container">
                 <div class="card">
                     <img src="/assets/icons/Medal.svg" alt="Icône école" loading="lazy" />
-                    <h3 class="card-title">Conséquences</h3>
+                    <h3 class="card-title">Consequences</h3>
                     <ul class="card-list">
-                        <li>Perte de reconnaissance historique</li>
-                        <li>Découragement des futures chercheuses</li>
-                        <li>Perpétuation des stéréotypes de genre</li>
-                        <li>Histoire de la science incomplète</li>
-                        <li>Inégalités persistantes</li>
+                        <li>Loss of historical recognition</li>
+                        <li>Discouragement of future women researchers</li>
+                        <li>Perpetuation of gender stereotypes</li>
+                        <li>Incomplete history of science</li>
+                        <li>Persistent inequalities</li>
                     </ul>
                 </div>
             </div>
         </section>
 
         <section class="content">
-            <h2 class="content-title">Exemples Notables</h2>
+            <h2 class="content-title">Notable Examples</h2>
 
             <p class="content-description">
-                Sur les plus de 900 prix Nobel scientifiques décernés depuis 1901, moins de 4% ont été attribués à des femmes. Parmi ces rares lauréates, plusieurs cas documentés montrent que d'autres femmes scientifiques ont été exclues alors que leurs contributions étaient essentielles à la découverte récompensée.
+                Of the more than 900 scientific Nobel Prizes awarded since 1901, fewer than 4% have been given to women. Among these rare laureates, several documented cases show that other women scientists were excluded while their contributions were essential to the discovery being recognised.
             </p>
         </section>
 
         <section class="other-articles">
             <hr>
-            <h3 class="other-articles-title">Lire aussi</h3>
+            <h3 class="other-articles-title">Also read</h3>
 
             <a href="/fr/film.html" class="other-articles-button">
-                Retour vers le Futur
+                Back to the Future
                 <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
 
             <br>
 
             <a href="/fr/histoire.html" class="other-articles-button">
-                Mileva Einstein : La Chercheuse
+                Mileva Einstein: The Researcher
                 <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
         </section>
@@ -151,10 +151,10 @@
             </a>
 
             <nav class="footer-nav" aria-label="Navigation du footer">
-                <p class="footer-nav-title">Liens utiles</p>
+                <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/" class="footer-nav-link">Mention Légales</a></li>
+                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
                     <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
@@ -162,7 +162,7 @@
         </div>
 
         <div class="footer-social">
-            <p class="social-title">Nous suivre</p>
+            <p class="social-title">Follow us</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener">
                     <img src="/assets/icons/Facebook.svg" alt="Facebook" loading="lazy" />
@@ -179,7 +179,7 @@
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de Montbéliard</p>
+            <p>© Project carried out in 2025 as part of an educational exercise at the MMi department of Montbéliard</p>
         </div>
     </footer>
     <script src="/src/js/menu.js"></script>
