--- a/en/theory.html
+++ b/en/theory.html
@@ -33,7 +33,7 @@
         <div class="header-actions">
             <button class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
-                <span class="lang-label">FR</span>
+                <span class="lang-label">EN</span>
             </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
@@ -43,17 +43,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
+                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
+                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -61,47 +61,47 @@
     <main>
         <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
-                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Back to Home
             </a>
             <img src="/assets/img/science.avif" class="mileva" loading="lazy" />
         </div>
 
         <section class="introduction">
-            <h1 class="title">Espace-Temps & Vitesse de la Lumière</h1>
-            <p class="description">Une vulgarisation accessible des concepts révolutionnaires de la relativité restreinte auxquels Mileva Einstein a contribué.</p>
+            <h1 class="title">Space-Time & Speed of Light</h1>
+            <p class="description">An accessible popularisation of the revolutionary concepts of special relativity to which Mileva Einstein contributed.</p>
         </section>
 
         <section class="article-section">
-            <h2 class="article-title">Le Rôle de Mileva dans la Théorie</h2>
+            <h2 class="article-title">Mileva's Role in the Theory</h2>
             <p>
-                Le rôle exact de Mileva Marić Einstein dans le développement de la théorie de la relativité restreinte demeure aujourd’hui un sujet de débat parmi les historiens des sciences. L’absence de documents conclusifs, tels que des manuscrits signés conjointement ou des publications officielles à son nom, rend toute affirmation définitive difficile. Néanmoins, plusieurs éléments historiques et contextuels suggèrent que Mileva a joué un rôle plus important que celui qui lui a été traditionnellement attribué, en particulier dans les aspects mathématiques complexes de la théorie.
+                The exact role of Mileva Marić Einstein in the development of special relativity remains a subject of debate among historians of science. The lack of conclusive documents, such as jointly signed manuscripts or official publications under her name, makes any definitive claim difficult. Nevertheless, several historical and contextual elements suggest that Mileva played a more significant role than traditionally credited, particularly in the mathematically complex aspects of the theory.
             </p>
             <p>
-                Mileva Marić possédait une solide formation en mathématiques et en physique théorique, acquise notamment lors de ses études au Polytechnicum de Zurich. Elle suivait les mêmes cours qu’Albert Einstein et maîtrisait les outils mathématiques nécessaires à l’élaboration de modèles théoriques avancés. À une époque où les mathématiques occupaient une place centrale dans la formalisation des théories physiques, cette expertise constitue un indice important de sa capacité à contribuer activement aux travaux en cours.
+                Mileva Marić had a strong background in mathematics and theoretical physics, acquired notably during her studies at the Zurich Polytechnic. She attended the same courses as Albert Einstein and mastered the mathematical tools required to develop advanced theoretical models. At a time when mathematics was central to the formalization of physical theories, this expertise is an important indicator of her capacity to contribute actively to ongoing work.
             </p>
             <p>
-                Les lettres échangées entre Albert Einstein et Mileva Marić apportent un éclairage précieux sur la nature de leur relation intellectuelle. Elles témoignent d’échanges scientifiques réguliers, d’une réflexion commune et d’un véritable dialogue autour des problèmes fondamentaux de la physique. Dans une lettre datant de 1901, Albert écrit : « Comme je serai heureux et fier quand nous aurons mené ensemble notre travail sur le mouvement relatif à une conclusion victorieuse ! ».
+                The letters exchanged between Albert Einstein and Mileva Marić provide valuable insight into the nature of their intellectual relationship. They show regular scientific exchanges, shared reflection, and a genuine dialogue about fundamental problems in physics. In a 1901 letter, Albert wrote, "How happy and proud I will be when we have brought our work on relative motion to a victorious conclusion together!"
             </p>
             <p>
-                Plusieurs historiens avancent l’hypothèse que Mileva aurait contribué à la vérification mathématique des équations, à la discussion des hypothèses et à la clarification conceptuelle des idées liées au mouvement relatif et au temps. Même si ces contributions ne sont pas directement visibles dans les publications finales, elles pourraient avoir joué un rôle déterminant dans la maturation des concepts qui ont conduit à la relativité restreinte.
+                Several historians hypothesize that Mileva contributed to the mathematical verification of equations, the discussion of hypotheses, and the conceptual clarification of ideas related to relative motion and time. Even if these contributions are not directly visible in the final publications, they may have played a decisive role in the maturation of concepts that led to special relativity.
             </p>
             <p>
-                Le cas de Mileva Marić invite ainsi à une lecture plus nuancée de l’histoire de la relativité. Sans remettre en cause le génie scientifique d’Albert Einstein, il souligne l’importance de considérer les collaborations, souvent invisibles, qui ont pu nourrir ses travaux. L’étude de son rôle participe plus largement à une réflexion sur la manière dont certaines contributions féminines ont été marginalisées dans l’histoire des sciences.
+                The case of Mileva Marić thus invites a more nuanced reading of the history of relativity. Without questioning Albert Einstein's scientific genius, it highlights the importance of considering often invisible collaborations that may have nourished his work. Studying her role contributes more broadly to reflection on how some female contributions have been marginalized in the history of science.
             </p>
         </section>
 
         <section class="physics-theory">
-            <h2 class="content-title">Physique Théorique</h2>
-            <p class="physics-description">Les contributions de Mileva Einstein à la relativité restreinte témoignent d'une maîtrise exceptionnelle des mathématiques complexes nécessaires à l'unification de l'espace et du temps.</p>
+            <h2 class="content-title">Theoretical Physics</h2>
+            <p class="physics-description">Mileva Einstein's contributions to special relativity reflect an exceptional command of the advanced mathematics needed to unite space and time.</p>
 
             <div class="cards-container">
                 <div class="card">
                     <img src="/assets/icons/Clock.svg" alt="" loading="lazy" />
-                    <h3 class="card-title">Espace-Temps</h3>
+                    <h3 class="card-title">Space-Time</h3>
                     <p>
                         ds² = c²dt² - dx² - dy² - dz² 
                         <br>
-                        La fusion révolutionnaire de l'espace et du temps en une seule entité mathématique.
+                        The revolutionary merging of space and time into a single mathematical entity.
                     </p>
                 </div>
             </div>
@@ -109,11 +109,11 @@
             <div class="cards-container">
                 <div class="card">
                     <img src="/assets/icons/Lightning.svg" alt="" loading="lazy" />
-                    <h3 class="card-title">Vitesse de la Lumière</h3>
+                    <h3 class="card-title">Speed of Light</h3>
                     <p>
                         c = 299,792,458 m/s  
                         <br>
-                        La constante universelle qui relie l'énergie et la matière.
+                        The universal constant that links energy and matter.
                     </p>
                 </div>
             </div>
@@ -123,11 +123,11 @@
             <div class="cards-container">
                 <div class="card">
                     <img src="/assets/icons/Science_Line.svg" alt="" loading="lazy" />
-                    <h3 class="card-title">Relativité Restreinte</h3>
+                    <h3 class="card-title">Special Relativity</h3>
                     <p>
                         E = mc²  
                         <br>
-                        L'équation qui a changé notre compréhension de l'univers.
+                        The equation that changed our understanding of the universe.
                     </p>
                 </div>
             </div>
@@ -135,14 +135,14 @@
             <div class="cards-container">
                 <div class="card">
                     <img src="/assets/icons/Science_Line.svg" alt="" loading="lazy" />
-                    <h3 class="card-title">Les Transformations de Lorentz</h3>
-                    <p>Équations mathématiques fondamentales de la relativité restreinte :</p>
+                    <h3 class="card-title">Lorentz Transformations</h3>
+                    <p>Fundamental mathematical equations of special relativity:</p>
                     <ul class="card-list">
                         <li>x' = γ(x - vt)</li>
                         <li>t' = γ(t - vx/c²)</li>
-                        <li>où γ = 1/√(1 - v²/c²)</li>
+                        <li>where γ = 1/√(1 - v²/c²)</li>
                     </ul>
-                    <p>Ces équations nécessitaient une maîtrise exceptionnelle des mathématiques, domaine dans lequel Mileva excellait.</p>
+                    <p>These equations required an exceptional command of mathematics, a field in which Mileva excelled.</p>
                 </div>
             </div>
         </section>
@@ -155,18 +155,18 @@
                 <p>Chronova</p>
             </a>
             <nav class="footer-nav" aria-label="Navigation du footer">
-                <p class="footer-nav-title">Liens utiles</p>
+                <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/" class="footer-nav-link">Mentions Légales</a></li>
-                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
+                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
+                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossary</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
 
         <div class="footer-social">
-            <p class="social-title">Nous suivre</p>
+            <p class="social-title">Follow us</p>
             <div class="social-links">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
                     <img src="/assets/icons/Facebook.svg" alt="" aria-hidden="true" loading="lazy" />
@@ -183,7 +183,7 @@
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
+            <p>© Project carried out in 2025 as part of an educational exercise at the MMi department of Montbéliard</p>
         </div>
     </footer>
     <script src="/src/js/menu.js"></script>
